# spec/openapi.json
@@ -56,6 +56,11 @@
           }
         }
       },
+      "Instant" : {
+        "type" : "string",
+        "format" : "date-time",
+        "examples" : [ "2022-03-10T16:15:50Z" ]
+      },
       "Pagination" : {
         "type" : "object",
         "properties" : {
@@ -107,12 +112,15 @@
         "operationId" : "findBooks",
         "tags" : [ "book" ],
         "parameters" : [ {
+          "description" : "ISBN-13:完全一致",
+          "example" : "9784873115658",
           "name" : "isbn",
           "in" : "query",
           "schema" : {
             "type" : "string"
           }
         }, {
+          "description" : "取得数",
           "name" : "limit",
           "in" : "query",
           "schema" : {
@@ -123,6 +131,7 @@
             "default" : "100"
           }
         }, {
+          "description" : "取得開始位置",
           "name" : "offset",
           "in" : "query",
           "schema" : {
@@ -132,6 +141,7 @@
             "default" : "0"
           }
         }, {
+          "description" : "検索結果の並び順",
           "name" : "order",
           "in" : "query",
           "schema" : {
@@ -142,6 +152,7 @@
             } ]
           }
         }, {
+          "description" : "価格:下限",
           "name" : "priceFrom",
           "in" : "query",
           "schema" : {
@@ -150,6 +161,7 @@
             "minimum" : 0
           }
         }, {
+          "description" : "価格:上限",
           "name" : "priceTo",
           "in" : "query",
           "schema" : {
@@ -158,6 +170,30 @@
             "minimum" : 0
           }
         }, {
+          "description" : "出版日:終了",
+          "example" : "2025-01-01T00:00:00Z",
+          "name" : "publishedTimeEnd",
+          "in" : "query",
+          "schema" : {
+            "$ref" : "#/components/schemas/Instant"
+          }
+        }, {
+          "description" : "出版日:開始",
+          "example" : "2025-01-01T00:00:00Z",
+          "name" : "publishedTimeStart",
+          "in" : "query",
+          "schema" : {
+            "$ref" : "#/components/schemas/Instant"
+          }
+        }, {
+          "description" : "ステータス",
+          "name" : "status",
+          "in" : "query",
+          "schema" : {
+            "$ref" : "#/components/schemas/BookStatus"
+          }
+        }, {
+          "description" : "書籍タイトル:部分一致",
           "name" : "title",
           "in" : "query",
           "schema" : {
